--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,8 +45,10 @@ h3 {
     padding-bottom:20px;
 }
 h4 {
+    font-size:20px;
     line-height:40px;
     padding-bottom:40px;
+    text-align:justify;
 }
 
 p {
