--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,8 @@
    
     ========================================================  */
 
+@import url(http://fonts.googleapis.com/css?family=Ruluko);
+
 /*=======================================
     GENERAL STYLES
 ==================================================*/
