--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,12 @@
 
 @import url(http://fonts.googleapis.com/css?family=Ruluko);
 
+@font-face {
+  font-family: 'Ruluko';
+  src: url(assets/font/Ruluko-Regular.ttf);
+}
+
+
 /*=======================================
     GENERAL STYLES
 ==================================================*/
