--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,7 @@
     IN EXCHANGE JUST GIVE US CREDITS AND TELL YOUR FRIENDS ABOUT US
    
     ========================================================  */
-
-@import url(http://fonts.googleapis.com/css?family=Ruluko);
-
-@font-face {
-  font-family: 'Ruluko';
-  src: url(assets/font/Ruluko-Regular.ttf);
-}
+@import url(https://fonts.googleapis.com/css?family=Ruluko);
 
 
 /*=======================================
