--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,7 +310,7 @@ min-height:600px;
 }
 
 #Parallax-seven {
-    background-image: url("../img/8.jpg");
+    background-image: url("../img/8.JPG");
 padding: 0;
 background-repeat: no-repeat;
 background-position: center 0;
