--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ h6 { /*==used in last parallax image*/
     font-size:30px;
     line-height:40px;
     padding-bottom:40px;
+    text-align:justify;
 }
 
 p {
